--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DownUnder</title>
+    <title>DownUnder Photographs</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
     <!-- Menu -->
@@ -48,7 +48,7 @@
                  <button data-bs-target="#mySlider" data-bs-slide-to="2"></button>
              </ol>
              <div class="carousel-inner">
-                 <div class="carousel-item carousel-image-1 active">
+                 <div class="carousel-item carousel-image-1 active" >
                      <div class="container">
                          <div class="carousel-caption d-none d-sm-block">
                              <h1 class="display-3">One</h1>
@@ -56,7 +56,7 @@
                          </div>
                      </div>
                  </div>
-                 <div class="carousel-item carousel-image-2">
+                 <div class="carousel-item carousel-image-2" >
                     <div class="container">
                         <div class="carousel-caption d-none d-sm-block">
                             <h1 class="display-3">Two</h1>
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                  </div>
-                 <div class="carousel-item carousel-image-3">
+                 <div class="carousel-item carousel-image-3" >
                     <div class="container">
                         <div class="carousel-caption d-none d-sm-block">
                             <h1 class="display-3">Three</h1>
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 text-center mb-4">
-                    <i class="fas fa-user-tie fa-3x mb-2"></i>
+                    <i class="fas fa-camera fa-3x mb-2"></i>
                     <h3>One</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam libero ab deleniti mollitia aperiam ipsum odio totam sunt voluptas sapiente.</p>
                 </div>
@@ -97,13 +97,14 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam libero ab deleniti mollitia aperiam ipsum odio totam sunt voluptas sapiente.</p>
                 </div>
                 <div class="col-md-4 text-center mb-4">
-                    <i class="fas fa-photo-video fa-3x mb-2"></i>
+                    <i class="fas fa-camera fa-3x mb-2"></i>
                     <h3>Three</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam libero ab deleniti mollitia aperiam ipsum odio totam sunt voluptas sapiente.</p>
                 </div>
             </div>
         </div>
     </section>
+
     <!-- about -->
     <section id="about" class="p-5">
         <div class="dark-overlay">
@@ -117,6 +118,7 @@
             </div>
         </div>
     </section>
+
     <!-- gallary -->
     <section id="gallary" class="p-5">
         <div class="container">
@@ -158,6 +160,7 @@
             </div>
         </div>
     </section>
+    
     <!-- Footer -->
     <footer class="text-center p-4">
         <div class="container">
@@ -179,23 +182,25 @@
                 </div>
                 <div class="modal-body">
                     <form>
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="email" placeholder="Email" class="form-control">
-                        </div>
-                        <div class="form-group">
+                        <div class="mb-3">
+                            <label for="InputEmail1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        </div>                                       
+                        
+                        <div class="mb-3">
                             <label>Project</label>
                             <input type="text" placeholder="Your Project" class="form-control">
                         </div>
                         <div class="form-group">
                             <label>Information</label>
-                            <textarea id="" cols="30" rows="10" class="form-control"></textarea>
+                            <textarea id="" cols="30" rows="8" class="form-control"></textarea>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button class="btn btn-success">Submit</button>
+                    <button class="btn btn-outline-light" data-bs-dismiss="modal">Cancel</button>
+                    <button class="btn btn-outline-info">Submit</button>
                 </div>
             </div>
         </div>
