--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#service" class="nav-link">Service</a>
+                        <a href="#service" class="nav-link">Place To Go</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#about" class="nav-link">About Me</a>
+                        <a href="#about" class="nav-link">Things To Do</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-bs-toggle="modal" data-bs-target="#myModal">Contact Me</a>
+                        <a class="nav-link" data-bs-toggle="modal" data-bs-target="#myModal">Plan Your Trip</a>
                     </li>
                 </ul>
             </div>
@@ -47,29 +47,38 @@
                  <button data-bs-target="#mySlider" data-bs-slide-to="0" class="active"></button>
                  <button data-bs-target="#mySlider" data-bs-slide-to="1"></button>
                  <button data-bs-target="#mySlider" data-bs-slide-to="2"></button>
+                 <button data-bs-target="#mySlider" data-bs-slide-to="3"></button>
              </ol>
              <div class="carousel-inner">
                  <div class="carousel-item carousel-image-1 active" >
                      <div class="container">
                          <div class="carousel-caption d-none d-sm-block">
-                             <h1 class="display-3">One</h1>
-                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni asperiores impedit iste velit. Tenetur nostrum voluptatum quod obcaecati quisquam animi?</p>
+                             <h1 class="display-3"> </h1>
+                             <p> </p>
                          </div>
                      </div>
                  </div>
                  <div class="carousel-item carousel-image-2" >
                     <div class="container">
                         <div class="carousel-caption d-none d-sm-block">
-                            <h1 class="display-3">Two</h1>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni asperiores impedit iste velit. Tenetur nostrum voluptatum quod obcaecati quisquam animi?</p>
+                            <h1 class="display-3"> </h1>
+                            <p> </p>
                         </div>
                     </div>
                  </div>
                  <div class="carousel-item carousel-image-3" >
                     <div class="container">
                         <div class="carousel-caption d-none d-sm-block">
-                            <h1 class="display-3">Three</h1>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni asperiores impedit iste velit. Tenetur nostrum voluptatum quod obcaecati quisquam animi?</p>
+                            <h1 class="display-3"> </h1>
+                            <p> </p>
+                        </div>
+                    </div>
+                 </div>
+                 <div class="carousel-item carousel-image-4" >
+                    <div class="container">
+                        <div class="carousel-caption d-none d-sm-block">
+                            <h1 class="display-3"> </h1>
+                            <p> </p>
                         </div>
                     </div>
                  </div>
@@ -89,19 +98,55 @@
             <div class="row">
                 <div class="col-md-4 text-center mb-4">
                     <i class="fas fa-camera fa-3x mb-2"></i>
-                    <h3>One</h3>
+                    <h3>New South Wales</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam libero ab deleniti mollitia aperiam ipsum odio totam sunt voluptas sapiente.</p>
                 </div>
                 <div class="col-md-4 text-center mb-4">
                     <i class="fas fa-camera fa-3x mb-2"></i>
-                    <h3>Two</h3>
+                    <h3>Victoria</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam libero ab deleniti mollitia aperiam ipsum odio totam sunt voluptas sapiente.</p>
                 </div>
                 <div class="col-md-4 text-center mb-4">
                     <i class="fas fa-camera fa-3x mb-2"></i>
-                    <h3>Three</h3>
+                    <h3>Queensland</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam libero ab deleniti mollitia aperiam ipsum odio totam sunt voluptas sapiente.</p>
                 </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 text-center mb-4">
+                    <i class="fas fa-camera fa-3x mb-2"></i>
+                    <h3>South Auatralia</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam libero ab deleniti mollitia aperiam ipsum odio totam sunt voluptas sapiente.</p>
+                </div>
+                <div class="col-md-4 text-center mb-4">
+                    <i class="fas fa-camera fa-3x mb-2"></i>
+                    <h3>Westen Australia</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam libero ab deleniti mollitia aperiam ipsum odio totam sunt voluptas sapiente.</p>
+                </div>
+                <div class="col-md-4 text-center mb-4">
+                    <i class="fas fa-camera fa-3x mb-2"></i>
+                    <h3>Tasmania</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam libero ab deleniti mollitia aperiam ipsum odio totam sunt voluptas sapiente.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 text-center mb-4">
+                    <i class="fas fa-camera fa-3x mb-2"></i>
+                    <h3>Australian Capital Territory</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam libero ab deleniti mollitia aperiam ipsum odio totam sunt voluptas sapiente.</p>
+                </div>
+                <div class="col-md-4 text-center mb-4">
+                    <i class="fas fa-camera fa-3x mb-2"></i>
+                    <h3>Northern Territory</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam libero ab deleniti mollitia aperiam ipsum odio totam sunt voluptas sapiente.</p>
+                </div>
+                
             </div>
         </div>
     </section>
@@ -112,7 +157,7 @@
             <div class="row">
                 <div class="col">
                     <div class="container pt-5">
-                        <h1>About me</h1>
+                        <h1>About Australia</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium blanditiis iste quibusdam. Eos impedit soluta asperiores expedita corrupti sequi quisquam, minus, non ipsa nostrum recusandae obcaecati consequuntur esse in voluptatum.</p>
                     </div>
                 </div>
@@ -167,7 +212,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <p>Copyright &copy; 2023</p>
+                    <p>&copy; 2023 Down Under &copy;</p>
                 </div>
             </div>
         </div>
